# metis

./: README.md  pyproject.toml
src/agent/: __init__.py  loop.py
src/mcp_metis/: __init__.py  __main__.py  server.py
src/mcp_metis/tools/: __init__.py  computer.py
