[project]
name = "mcp-metis"
version = "0.1.0"
description = "MCP Server for Metis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "html2text>=2024.2.26",
    "mcp[cli]>=1.2.0",
    "requests>=2.32.3",
    "anthropic>=0.37.1",
    "jsonschema==4.22.0",
    "boto3>=1.28.57",
    "html2text",
    "anthropic",
    "bs4",
    "strenum",
]

[project.scripts]
mcp-metis = "mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"